ER9x changelog
Please insert a short description of a change by inserting it below this header and 
above the previous change.

Format is as follows:
******************************************
CHANGELOG: 24-JAN-2011
description here
====================================================================================

******************************************
CHANGELOG: 2-FEB-2012 ER
Moved menus around and change the nomeclature to make it more newcomer friendly
Changed MAX to HALF to follow er9x nomeclature

******************************************
CHANGELOG: 9-FEB-2012 ER
Added default avrdude location for MAC
Changed fuse set warning to be more user friendly
Restored the ability to set fuses back to factory default.

******************************************
CHANGELOG: 7-FEB-2012 ER
Fixed load model and general settings files error
Allow revision numbers to be 4 digit

******************************************
CHANGELOG: 30-JAN-2012 ER
Minor tweaks and fixes

******************************************
CHANGELOG: 27-JAN-2012 ER
Notes functional

******************************************
CHANGELOG: 27-JAN-2012 ER
XML structured data saving in EEPE/EEPM/EEPG files
Added file info
Removed fuses dialog and replace with simpler "Set Fuses"
Fixed model size show on main list

******************************************
CHANGELOG: 24-JAN-2012 ER
Fixed issue with protocol box and data resetting

******************************************
CHANGELOG: 22-1-2012 ER
Menu changes for protocols
Enable light on by moving sticks
More elaborate sw warning

******************************************
CHANGELOG: 12-1-2012 
Fix string search for splash screen replace dialog
Allow hiding of owner name on splash screen
Add linux 32bit and 64bit deb packages

******************************************
CHANGELOG: 7-1-2012 
Add a dialog to replace splash screen without recompiling

******************************************
CHANGELOG: 09-11-2011 MPB
Really fix the delay problem